--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
           name="description"
           content="create-react-app kullanılarak oluşturulmuş web sitesi"
   />
-  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+  <link rel="apple-touch-icon" href="%PUBLIC_URL%/img/logo192.png" />
   <!--
     manifest.json, web uygulamanız bir kullanıcının mobil cihazına veya masaüstüne yüklendiğinde kullanılan meta verileri sağlar.
     Daha fazla bilgi için: https://developers.google.com/web/fundamentals/web-app-manifest/
