--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
+
 <head>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet"> 
 <link rel="stylesheet" href="App.css">
 	<script src="http://localhost:8097"></script>
