--- a/src/loginsayfasi/login.html
+++ b/src/loginsayfasi/login.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta charset="UTF-8">
     <title>Hebida</title>
     <link rel="stylesheet" href="login.css">
-    <script src="login.js"></script>
+
 </head>
 <body>
 <button id="git">tıkla</button>
+
+
 </body>
 </html>
